--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "axios": "^0.19.0",
     "datejs": "^1.0.0-rc3",
     "firebase": "^6.6.0",
+    "firebase-tools": "^7.3.2",
     "react-router-dom": "^5.0.1"
   }
 }
